Fix T41977: 'Shading' panel of Render buttons not updating Rendered 3DView.

Reuse `rna_Scene_glsl_update` here too.